--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 # Raymond's .bat file that just opens up CMD
 open.bat
 
-# Created by https://www.toptal.com/developers/gitignore/api/python,pycharm
-# Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm
+# Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,visualstudiocode
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -238,4 +238,16 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
-# End of https://www.toptal.com/developers/gitignore/api/python,pycharm
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode
